A bit more tidying up

--- a/client/App.config
+++ b/client/App.config
@@ -25,7 +25,7 @@
         <value>VirtualFlight.Online</value>
       </setting>
       <setting name="ServerURL" serializeAs="String">
-        <value>http://virtualflight.online/send.php</value>
+        <value>http://yourserver/send.php</value>
       </setting>
       <setting name="Notes" serializeAs="String">
         <value />
