Added pin number functionality
You can now set a pin number on the server - if it is set, the pin from the client has to match for a transmission to be recognised.

--- a/client/App.config
+++ b/client/App.config
@@ -24,9 +24,6 @@
       <setting name="GroupName" serializeAs="String">
         <value>VirtualFlight.Online</value>
       </setting>
-      <setting name="ServerURL" serializeAs="String">
-        <value>http://yourserver/send.php</value>
-      </setting>
       <setting name="Notes" serializeAs="String">
         <value />
       </setting>
@@ -36,14 +33,11 @@
       <setting name="AutoConnect" serializeAs="String">
         <value>true</value>
       </setting>
-      <setting name="BroadcastToDiscord" serializeAs="String">
-        <value>true</value>
+      <setting name="ServerURL" serializeAs="String">
+        <value>http://yourserver/send.php</value>
       </setting>
-      <setting name="BroadcastLocation" serializeAs="String">
-        <value>true</value>
-      </setting>
-      <setting name="BroadcastNotes" serializeAs="String">
-        <value>false</value>
+      <setting name="Pin" serializeAs="String">
+        <value>1234</value>
       </setting>
     </VirtualFlightOnlineTransmitter.Properties.Settings>
   </userSettings>
