Updated the client software

--- a/client/App.config
+++ b/client/App.config
@@ -12,32 +12,38 @@
   </startup>
   <userSettings>
     <VirtualFlightOnlineTransmitter.Properties.Settings>
-      <setting name="Callsign" serializeAs="String">
+      <setting name="servers" serializeAs="String">
+        <value>[{"serverName":"VirtualFlight.Online","callsign":"Callsign","pilotName":"Pilot Name","groupName":"VirtualFlight.Online","notes":"","msfsServer":"WEST EUROPE","autoConnect":"true","serverURL":"http://yourserver/transmit.php","pin":"1234"}]</value>
+      </setting>
+      <setting name="serverName" serializeAs="String">
+        <value>Your Server Name</value>
+      </setting>
+      <setting name="callsign" serializeAs="String">
         <value>Your Callsign</value>
       </setting>
-      <setting name="AircraftType" serializeAs="String">
-        <value>Your Aircraft Type</value>
+      <setting name="pilotName" serializeAs="String">
+        <value>Your Pilot Name</value>
       </setting>
-      <setting name="PilotName" serializeAs="String">
-        <value>Your Name</value>
+      <setting name="groupName" serializeAs="String">
+        <value>Your Group Name</value>
       </setting>
-      <setting name="GroupName" serializeAs="String">
-        <value>VirtualFlight.Online</value>
-      </setting>
-      <setting name="Notes" serializeAs="String">
+      <setting name="notes" serializeAs="String">
         <value />
       </setting>
-      <setting name="MSFSServer" serializeAs="String">
-        <value>SOUTH EAST ASIA</value>
+      <setting name="msfsServer" serializeAs="String">
+        <value>WEST EUROPE</value>
       </setting>
-      <setting name="AutoConnect" serializeAs="String">
+      <setting name="autoConnect" serializeAs="String">
         <value>true</value>
       </setting>
-      <setting name="ServerURL" serializeAs="String">
-        <value>http://yourserver/send.php</value>
+      <setting name="serverURL" serializeAs="String">
+        <value>https://transmitter.virtualflight.online/transmit.php</value>
       </setting>
-      <setting name="Pin" serializeAs="String">
+      <setting name="pin" serializeAs="String">
         <value>1234</value>
+      </setting>
+      <setting name="selectedServer" serializeAs="String">
+        <value>0</value>
       </setting>
     </VirtualFlightOnlineTransmitter.Properties.Settings>
   </userSettings>
