I forgot to set the default server!

--- a/client/App.config
+++ b/client/App.config
@@ -13,7 +13,7 @@
   <userSettings>
     <VirtualFlightOnlineTransmitter.Properties.Settings>
       <setting name="servers" serializeAs="String">
-        <value>[{"serverName":"VirtualFlight.Online","callsign":"Callsign","pilotName":"Pilot Name","groupName":"VirtualFlight.Online","notes":"","msfsServer":"WEST EUROPE","autoConnect":"true","serverURL":"http://yourserver/transmit.php","pin":"1234"}]</value>
+        <value>[{"serverName":"VirtualFlight.Online","callsign":"Callsign","pilotName":"Pilot Name","groupName":"VirtualFlight.Online","notes":"","msfsServer":"WEST EUROPE","autoConnect":"true","serverURL":"https://transmitter.virtualflight.online/transmit","pin":"1234"}]</value>
       </setting>
       <setting name="serverName" serializeAs="String">
         <value>Your Server Name</value>
